# VH1-Bot

./: .gitignore  Cargo.toml  Readme.md
src/: command.rs  localserver.rs  main.rs  sub_command.rs
src/Lavalink/: application.yml
src/commands/: localserver_cmds.rs  mod.rs  music_advanced.rs  music_basic.rs  music_events.rs  test.rs  voice_receive.rs
src/commands/music/: mod.rs  music_advanced.rs  music_basic.rs  music_events.rs
