[package]
name = "VH1-Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.138"
serde = "1.0.217"
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json", "blocking"]}
log = "0.4.25"
once_cell = "1.20.2"
toml = "0.8.19"
chrono = "0.4.39"
dashmap = "6.1.0"
anyhow = "1.0.95"

[dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono", "handle_panics",]

[dependencies.songbird]
version = "0.4.6"
default-features = false
features = ["gateway", "serenity", "native", "driver", "receive"]

[dependencies.symphonia]
version = "0.5.4"

[dependencies.tokio]
version = "1.43.0"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.14.1"
