[package]
name = "VH1-Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.140"
serde = "1.0.219"
futures = "0.3"
reqwest = { version = "0.12.15", features = ["json", "blocking"]}
log = "0.4.27"
once_cell = "1.21.3"
toml = "0.8.22"
chrono = "0.4.41"
dashmap = "6.1.0"
anyhow = "1.0.98"
eframe = "0.31.1"
egui = "0.31.1"
rand = "0.9.1"
axum = "0.8.4"
tower-http = { version = "0.6", features = ["fs"] }
hyper = "1.6.0"

[dependencies.poise]
version = "0.6.1"
default-features = false
features = ["cache", "chrono", "handle_panics", "collector"]

[dependencies.songbird]
version = "0.5.0"
default-features = false
features = ["gateway", "serenity", "native", "driver", "receive", "tungstenite"]

[dependencies.symphonia]
version = "0.5.4"

[dependencies.tokio]
version = "1.45.0"
features = ["rt-multi-thread", "macros"]

[dependencies.lavalink-rs]
version = "0.14.1"
